[package]
name = "recoverable-spawn"
version = "3.0.0"
edition = "2021"
authors = ["ltpp-universe <root@ltpp.vip>"] 
license = "MIT"
description = """A thread that supports automatic recovery from panics, allowing threads to restart after a panic. Useful for resilient and fault-tolerant concurrency in network and web programming."""
keywords = ["time", "hyperlane", "day", "format", "lang"]
repository = "https://github.com/ltpp-universe/recoverable-spawn.git"
categories = ["network-programming", "web-programming"]
exclude = [
    "target",
    "Cargo.lock",
    "sh",
    ".github"
]

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
