[package]
name = "recoverable-spawn"
version = "3.3.3"
edition = "2021"
authors = ["ltpp-universe <root@ltpp.vip>"] 
license = "MIT"
description = """A thread that supports automatic recovery from panics, allowing threads to restart after a panic. Useful for resilient and fault-tolerant concurrency in network and web programming."""
keywords = ["time", "hyperlane", "day", "format", "lang"]
repository = "https://github.com/ltpp-universe/recoverable-spawn.git"
categories = ["network-programming", "web-programming"]
exclude = [
    "target",
    "Cargo.lock",
    "sh",
    ".github"
]

[dependencies]
once_cell = "1.20.2"
tokio = { version = "1.43.0", features = ["full"] }

[profile.dev]
incremental = false
opt-level = 3
lto = true
panic = "abort"
debug = false
codegen-units = 1
strip = "debuginfo"
backtrace = "off"

[profile.release]
incremental = false
opt-level = 3
lto = true
panic = "abort"
debug = false
codegen-units = 1
strip = "debuginfo"
backtrace = "off"